--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "start": "rollup -c --watch"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,20 @@
   },
   "homepage": "https://github.com/bsaranga/resume#readme",
   "dependencies": {
+    "@mdx-js/rollup": "^3.1.0",
     "openai": "^5.10.1",
-    "puppeteer": "^24.14.0"
+    "puppeteer": "^24.14.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
+    "rollup": "^4.45.1"
   }
 }
