--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/bsaranga/resume#readme",
   "dependencies": {
     "@mdx-js/rollup": "^3.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "openai": "^5.10.1",
     "puppeteer": "^24.14.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -32,8 +34,10 @@
     "@babel/preset-react": "^7.27.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
-    "rollup": "^4.45.1"
+    "rollup": "^4.45.1",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
