--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "bin": {
+    "resumeagen": "./resumeagen.js"
+  },
   "scripts": {
-    "build": "NODE_ENV=production rollup -c && node ./run.js",
+    "build": "NODE_ENV=production rollup -c",
     "start": "NODE_ENV=development rollup -c --watch"
   },
   "repository": {
