--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/bsaranga/resumeagen#readme",
   "dependencies": {
+    "@inquirer/prompts": "^7.7.1",
     "@mdx-js/rollup": "^3.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "chalk": "^5.4.1",
+    "commander": "^14.0.0",
     "openai": "^5.10.1",
     "puppeteer": "^24.14.0",
     "react": "^19.1.0",
